--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "google-fonts-webpack-plugin": "^0.4.4",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
+    "vanilla-tilt": "^1.7.0",
+    "vue": "^2.6.10",
+    "vue-parallax-js": "^0.2.3",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
