--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "google-fonts-webpack-plugin": "^0.4.4",
+    "html-loader": "^0.5.5",
+    "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
     "sass-loader": "^8.0.0",
     "vanilla-tilt": "^1.7.0",
